apps/drone/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone
  namespace: drone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone
  template:
    metadata:
      labels:
        app: drone
    spec:
      containers:
        - name: drone
          image: drone/drone:2
          ports:
            - containerPort: 80
          volumeMounts:
            - name: drone-data
              mountPath: /data
      volumes:
        - name: drone-data
          persistentVolumeClaim:
            claimName: drone-pvc
