apps/drone/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone
  namespace: drone
spec:
  selector:
    app: drone
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
